[project]
name = "testserver"
version = "0.0.1"
description = "HTTP test server with incoming requests logging"
authors = [
    {name = "Pythalex"},
]
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "pyyaml~=6.0.1",
    "rich~=13.7.1",
]

[project.optional-dependencies]
lint = [
    "black~=23.9.1",
    "ruff~=0.0.292",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.config]
